# file-server

./: Cargo.toml  LICENSE  README.md
public/css/: main.css
src/: configs.rs  file_server.rs  main.rs  start.rs
src/file_manager/: handlers.rs  mod.rs  models.rs  templates.rs
src/file_server/: handlers.rs  mod.rs  models.rs
src/lib/: lib.rs  models.rs
templates/: directory-entry.html  file-content.html  index.html  program-list.html
