[package]
name = "file-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = "4.4.0"
clap = { version = "4.4.7", features = ["cargo"] }
env_logger = "0.10.0"
log = "0.4.20"
mime_guess = "2.0.4"
serde = { version = "1.0.190", features = ["derive"] }
